plugins{
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '9.3.1'
}

java {
    withSourcesJar()

    sourceCompatibility JavaVersion.VERSION_25
    targetCompatibility JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
    maven {
        name = "hytale-release"
        url = uri("https://maven.hytale.com/release")
    }
    repositories {
        maven { url 'https://jitpack.io' }
    }

    repositories {
        maven { url "https://www.cursemaven.com" }
    }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    compileOnly 'com.hypixel.hytale:Server:0.5.4'

    implementation("io.github.jaredmdobson:concentus:1.0.2")
    implementation 'javazoom:jlayer:1.0.1'
}

test {
    useJUnitPlatform()
}